# generative_ai_projects

./: Fully_connected_networks.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/libs/tensorflow_codes/: sample.py  simple_functional_network.py  simple_sequential_network.py  variables.py
